--- a/masterchef/style.css
+++ b/masterchef/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: CulinaryLab
 Theme URI: 
-Author: 
-Author URI: 
+Author: Roald bankras
+Author URI: https://kretar.com
 Description: A scientific laboratory approach to culinary arts inspired by molecular gastronomy
-Version: 1.1.2
+Version: 1.1.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: culinarylab
